# AOC

./: .gitignore  README.md  TEMPLATE.py  new.bat  requirement.txt
2015/: README.md
2015/day1/: 1.go  1.py  README.md  day1.ml  dune
2015/day10/: 10.go  10.py
2015/day11/: day11.ml  dune
2015/day12/: 12.py  day12.ml  dune
2015/day13/: 13.py
2015/day14/: 14.py
2015/day15/: 15.py
2015/day16/: 16.py
2015/day17/: 17.py
2015/day18/: day18.ml  dune
2015/day18_cli/: dune  sim.ml
2015/day19/: 19.py
2015/day2/: 2.go  2.py  day2.ml  dune
2015/day20/: day20.ml  dune
2016/: README.md
2023/: README.md  set_pythonpath.bat
2024/: README.md
2025/: .ocamlformat  aoc.opam  dune-project  readme.md
2025/inputs/day9/: sample_88.txt
2025/lib/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  days.ml  dune  solution.ml
2025/lib/utils/: dune  input.ml  iter.ml  math.ml  memo.ml  octree.ml  search.ml  timing.ml
2025/python_diversion/: day10_2.py  pyproject.toml
2025/test/: dune  test_aoc.ml
common/: utils.py
day1/: 1.py
day10/: 10.py
day11/: 11.py
day12/: 12.py
day13/: 13.py
day14/: 14.py
day16/: 16.py
day17/: 17.py
day18/: 18.py
day19/: 19.py  input_sample2.txt
day2/: 2.py
day20/: 20.py
day21/: 21.py
day22/: 22.py
day23/: 23.py
day24/: 24.py
day25/: 25.py
day3/: 3.py
day6/: 6.py
day7/: 7.py
day8/: 8.py
misc/: discord_prime_challenge.go  discord_prime_challenge.py
misc/LC/: 70.py  (+6 more)
templates/: TEMPLATE.ml  TEMPLATE.py
utils/: utils.go
(+157 files in other folders)
