(lang dune 3.19)

(name aoc)

(generate_opam_files true)

(source
 (github heathhenley/aoc))

(authors "Heath Henley <heath.j.henley+github@gmail.com>")


(license MIT)


(package
 (name aoc)
 (synopsis "Advent of Code 2025")
 (description "Advent of Code 2025 solutions in OCaml")
 (depends ocaml
  odoc)
 (tags
  ("adventofcode" "ocaml")))
